[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Control.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="MenuItem" type="Control"]
margin_left = 330.0
margin_top = 154.0
margin_right = 370.0
margin_bottom = 194.0
rect_scale = Vector2( 8.3013, 4.16625 )
script = ExtResource( 1 )

[node name="ItemListLevels" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.8493
margin_top = -19.7295
margin_right = 92.1507
margin_bottom = 43.2705
rect_scale = Vector2( 0.389875, 0.534253 )
theme = SubResource( 1 )
items = [ "Easy", null, false, "Normal", null, false, "Hard", null, false ]
allow_reselect = true
max_text_lines = 3
auto_height = true
max_columns = 3
same_column_width = true

[node name="Button" type="Button" parent="."]
margin_left = 2.16833
margin_top = 42.2442
margin_right = 43.1683
margin_bottom = 62.2442
text = "start"

[connection signal="item_activated" from="ItemListLevels" to="." method="_on_ItemList_item_activated"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
